--- a/registration.html
+++ b/registration.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.js"></script>
+<link rel="icon" type="image/png" href="images/icon2.jpg"/>
 <script>
     $(document). ready(function(){
         $('[data-toggle="tooltip"]').tooltip()
